css/default.css
/* ... */
/*  “et al”
 */
.cite-joiner {
    display: none;
}

/*  Date
 */
.cite-date {
    vertical-align: -0.35ex;
    position: relative;
    font-size: 0.8em;
    line-height: 0.7;
    font-variant-numeric: tabular-nums;
    margin-left: 0.1em;
    white-space: nowrap;
}

/******************************/
/* “FURTHER READING” SECTIONS */
/******************************/

#further-reading .columns ul {
    margin-top: 0.5em;
    padding-left: 2.5em;
}
@media all and (max-width: 649px) {
    #further-reading .columns ul {
        padding-left: 1.75em;
    }
}

#further-reading > div + div {
    margin-top: 1.5em;
}

/***********************/
/* “SEE ALSO” SECTIONS */
/***********************/

#markdownBody section#see-also:first-child > h1:first-child {
    margin-top: 1em;
}

/*******************************/
/* PAGE-SPECIFIC MODIFICATIONS */
/*******************************/

/*=------------=*/
/*= Index page =*/
/*=------------=*/

/*  Link bibliography on index page. */
body.index section#link-bibliography {
    grid-column: 1 / span 2;
}

/*  Index’s special appearance requires some more v-space for the nav UI. */
body.index #navigation {
    margin: 2.5em 0 0.5em 0;
}

/*  Less fancy headings. */
body.index section:not(.collapse) > h1:first-child {
    font-size: 1.5em;
    line-height: 1.125;
    box-shadow: none;
    text-align: left;
    font-weight: bold;
    margin-left: 0;
    padding: 0;
}
/*  No pilcrows. */
body.index #markdownBody section > h1:first-child a::after {
    display: none;
}

/* For desktop users, we hide the horizontal rulers on the /index page as they are unnecessary given the flowing columns; for mobile users, we'll separate sections by rulers because they only get a single very long column to scroll through, which lacks a sense of hierarchy/chunking. However, desktop users still get the initial <hr> inserted by sed to divide the two blocks of New/Popular/Notable from all-topics sections (which has no class set on it). */
@media all and (min-width: 650px) {
/*  Horizontal ruler on the home page.
    */
    body.index hr {
        margin: 1.5em 0 0;
    }
    body.index [class^='horizontal-rule'] {
        display: none;
    }
}

/*  Back-to-top link on home page.
    */
@media only screen and (min-width: 1761px) {
    body.index #back-to-top {
        left: calc((100% - 1430px - 50px)/2);
    }
}

/*=-------------=*/
/*= /index-long =*/
/*=-------------=*/

body.index-long section > .include-wrapper-block + .include-wrapper-block {
    margin-top: 2.5em;
}

/*=----------------=*/
/*= /review/book =*/
/*=----------------=*/

#markdownBody .book-review-meta {
    margin: -0.5em 0 1.5em 0;
    display: flex;
    flex-flow: row;
    justify-content: flex-start;
    max-width: 100%;
}
.book-review-meta span {
    white-space: nowrap;
}
.book-review-meta span + span {
    margin-left: 1em;
}
.book-review-meta span:first-of-type {
    flex: 0 1 auto;
    max-width: 100%;
    text-overflow: ellipsis;
    overflow: hidden;
}
.book-review-meta span:first-of-type:hover {
    overflow: visible;
    white-space: normal;
    text-align: left;
    height: 1em;
    padding-left: 1.5em;
    text-indent: -1.5em;
}

/*=---------------=*/
/*= /review/mead =*/
/*=---------------=*/

/*  This is for the pictures of mead bottles next to the reviews.
    */
body.review-mead p > img {
    float: right;
    max-height: 8em;
    width: auto;
    position: relative;
    z-index: 1;
    margin: 1em 1em 1em 2em;
}

/*=-------=*/
/*= /hafu =*/
/*=-------=*/

body.hafu .table-wrapper#hafu-list-table td:last-of-type {
    width: 50%;
}

/*=--------------=*/
/*= /dnm-arrest =*/
/*=--------------=*/

body.dnm-arrest .table-wrapper#data-table td:nth-of-type(6),
body.dnm-arrest .table-wrapper#data-table td:nth-of-type(12),
body.dnm-arrest .table-wrapper#data-table td:nth-of-type(13) {
    white-space: nowrap;
}
body.dnm-arrest .table-wrapper#data-table td:last-of-type {
    width: 20%;
}

/*=--------=*/
/*= /lorem =*/
/*=--------=*/

body.lorem div[class^='drop-cap'] {
    margin: 1em 0 0 0;
}


/*************************/
/* UI ELEMENTS CONTAINER */
/*************************/

#ui-elements-container {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 10000;
    pointer-events: none;
}
#ui-elements-container > * {
    pointer-events: auto;
}


/****************/
/* PAGE TOOLBAR */
/****************/

#page-toolbar > button {
	appearance: none;
	border: none;
	background-color: transparent;
    padding: 0;
    margin: 0;
    font-size: inherit;
    font-family: inherit;
    font-weight: inherit;
    color: var(--GW-page-toolbar-button-color);
}
#page-toolbar > button svg {
    display: block;
}

#page-toolbar.mobile .buttons:empty ~ * {
	display: none;
}

#page-toolbar.mobile > button.collapse-button {
    order: -1;
    padding: 0 12px;
    outline: 1px dotted currentColor;
    background-color: var(--GW-body-background-color);
    transition: 
        opacity 0.25s ease-out 0.25s;
}
#page-toolbar.mobile > button.collapse-button:active {
    color: var(--GW-page-toolbar-button-active-color);
}
#page-toolbar.mobile > button.main-toggle-button {
    order: 1;
    transition: 
        opacity 0.25s ease-out,
        transform 0.25s ease-out;
}
#page-toolbar.mobile > button.main-toggle-button:active {
	transform: scale(0.95);
}

#page-toolbar.mobile {
    position: fixed;
    display: flex;
    flex-flow: column;
    width: 2.5em;
    align-items: stretch;
    bottom: 0.5em;
    right: 0.5em;
}
#page-toolbar.mobile .buttons {
    margin: 0.5em 0 0.75em 0;
    display: flex;
    flex-flow: column;
    align-items: stretch;
    transform-origin: bottom;
    transition:
    	transform 0.25s ease-out;
}
#page-toolbar.mobile .buttons .button-group {
    padding: 2px 0;
	outline: 1px dotted var(--GW-page-toolbar-border-color);
}
#page-toolbar.mobile .buttons > * + * {
    margin-top: 0.5em;
}
/* ... */

